--- a/.github/workflows/pscheduler-workflow.yml
+++ b/.github/workflows/pscheduler-workflow.yml
@@ -57,7 +57,7 @@ jobs:
                  cp project/toolbox/workflows/github-el-workflow.sh .
                  ;;
               'd11'|'d12'|'u20'|'u22'|'u24')
-                cp project/toolbox/workflows/github-db-workflow.sh .
+                cp project/toolbox/workflows/github_u20_workflow.sh .
                 ;;
             esac
             
@@ -108,7 +108,7 @@ jobs:
                    curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-el-workflow.sh . '${{ env.BUILD_OS }}'  
                 ;;
                 'd11'|'d12'|'u20'|'u22'|'u24')                
-                  curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-db-workflow.sh . '${{ env.BUILD_OS }}'
+                  curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github_u20_workflow.sh . '${{ env.BUILD_OS }}'
                 ;;
               esac
             
