--- a/.github/workflows/pscheduler-workflow.yml
+++ b/.github/workflows/pscheduler-workflow.yml
@@ -90,11 +90,7 @@ jobs:
                   cp "$artifact_path"/RPMS/*.rpm artifacts/RPMS
                  ;;
                 'd11'|'d12'|'u20'|'u22'|'u24')                
-                  mkdir -p artifacts/DEBS
-                  echo "copy to the artifacts DEBS dir"
-                  cp -r "$artifact_path"/* artifacts/DEBS
-                  echo "list artifacts DEBS dir"
-                  ls -al artifacts/DEBS/*
+                  ls -al artifacts/*
                   ;;
               esac
             done < deps.txt
