--- a/.github/workflows/single-pscheduler-workflow.yml
+++ b/.github/workflows/single-pscheduler-workflow.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - github-workflow 
 env: 
-  BUILD_OS: u24
+  BUILD_OS: u22
 
 jobs:
   pscheduler-daemon:
@@ -29,6 +29,7 @@ jobs:
               cp project/toolbox/workflows/github-el-workflow.sh .
               ;;
             'd11'|'d12'|'u20'|'u22'|'u24')
+              apt install --only-upgrade iperf3
               cp project/toolbox/workflows/github_u20_workflow.sh .
               ;;
           esac
