--- a/.github/workflows/single-pscheduler-workflow.yml
+++ b/.github/workflows/single-pscheduler-workflow.yml
@@ -58,7 +58,7 @@ jobs:
               curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-el-workflow.sh . '${{ env.BUILD_OS }}'
               ;;
             'd11'|'d12'|'u20'|'u22'|'u24')
-              curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-workflow-db-skip-install.sh . '${{ env.BUILD_OS }}'
+              curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github_u20_workflow.sh . '${{ env.BUILD_OS }}'
               ;;
           esac
       # Upload artifact
