--- a/.github/workflows/single-pscheduler-workflow.yml
+++ b/.github/workflows/single-pscheduler-workflow.yml
@@ -29,7 +29,7 @@ jobs:
               cp project/toolbox/workflows/github-el-workflow.sh .
               ;;
             'd11'|'d12'|'u20'|'u22'|'u24')
-              cp project/toolbox/workflows/github-ub-workflow-skip-install.sh .
+              cp project/toolbox/workflows/github-db-workflow.sh .
               ;;
           esac
       # Download artifacts
@@ -58,7 +58,7 @@ jobs:
               curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-el-workflow.sh . '${{ env.BUILD_OS }}'
               ;;
             'd11'|'d12'|'u20'|'u22'|'u24')
-              curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-ub-workflow-skip-install.sh . '${{ env.BUILD_OS }}'
+              curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - --run github-db-workflow.sh . '${{ env.BUILD_OS }}'
               ;;
           esac
       # Upload artifact
