--- a/.github/workflows/single-pscheduler-workflow.yml
+++ b/.github/workflows/single-pscheduler-workflow.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - github-workflow
 env:  
-  BUILD_OS: u22
+  BUILD_OS: d11
 
 jobs:
   pscheduler-daemon:
@@ -37,14 +37,14 @@ jobs:
         run: |
           mkdir -p artifacts
           echo "Downloading artifact for owamp"
-          echo "Run ID: 12433476027"
-          gh run download 12433476027 --repo cs1867/owamp -D artifacts/owamp --name "owamp-${{ env.BUILD_OS }}"  
+          echo "Run ID: 13148051334"
+          gh run download 13148051334 --repo cs1867/owamp -D artifacts/owamp --name "owamp-${{ env.BUILD_OS }}"  
           artifact_path="artifacts/owamp"
           echo "Listing artifact path:"
           ls -al "$artifact_path"
           echo "Downloading artifact for i2util"
-          echo "Run ID: 12433465085"
-          gh run download 12433465085 --repo cs1867/i2util -D artifacts/i2util --name "i2util-${{ env.BUILD_OS }}"  
+          echo "Run ID: 13148024525"
+          gh run download 13148024525 --repo cs1867/i2util -D artifacts/i2util --name "i2util-${{ env.BUILD_OS }}"  
           artifact_path="artifacts/perl-i2util"
 
         env:
