--- a/.github/workflows/pscheduler-workflow.yml
+++ b/.github/workflows/pscheduler-workflow.yml
@@ -14,9 +14,9 @@ jobs:
     with:
       BUILD_VARS_JSON: ${{ inputs.BUILD_VARS_JSON }}
 
-  oneshot-build:
+  oneshot-scripted-build:
     needs: prepare-build
-    uses: cs1867/project/.github/workflows/oneshot-script-build.yml@master
+    uses: cs1867/project/.github/workflows/oneshot-scripted-build.yml@master
     secrets:
       GIT_ACTIONS: ${{ secrets.GIT_ACTIONS }}
     with:
@@ -28,7 +28,7 @@ jobs:
   post-build:
     needs: 
       - prepare-build
-      - oneshot-build
+      - oneshot-scripted-build
     uses: cs1867/project/.github/workflows/post-build.yml@master
     secrets:
       GIT_ACTIONS: ${{ secrets.GIT_ACTIONS }}
