--- a/.github/workflows/single-pscheduler-workflow.yml
+++ b/.github/workflows/single-pscheduler-workflow.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - github-workflow
 env:  
-  BUILD_OS: el9 
+  BUILD_OS: d12 
 
 jobs:
   pscheduler-daemon:
@@ -16,7 +16,7 @@ jobs:
       - name: Check out Repo
         uses: actions/checkout@v4
         with:
-          ref: 5.2.0
+          ref: 5.2.4
 
       # Fetch workflow script from projects
       - name: Fetch workflow script from projects
@@ -36,21 +36,21 @@ jobs:
       - name: Download artifacts
         run: |
           mkdir -p artifacts
-          mkdir -p artifacts/RPMS
+          mkdir -p artifacts/deb
           echo "Downloading artifact for owamp"
-          echo "Run ID: 13741663953"
-          gh run download 13741663953 --repo cs1867/owamp -D artifacts/owamp --name "owamp-${{ env.BUILD_OS }}"  
+          echo "Run ID: 20489368050"
+          gh run download 20489368050 --repo cs1867/owamp -D artifacts/owamp --name "owamp-${{ env.BUILD_OS }}"  
           artifact_path="artifacts/owamp"
           echo "copy to the artifacts RPM dir"
-          cp "$artifact_path"/RPMS/*.rpm artifacts/RPMS
+          cp "$artifact_path"/*.deb artifacts/deb
           echo "Listing artifact path:"
           ls -al "$artifact_path"
           echo "Downloading artifact for i2util"
-          echo "Run ID: 13741656255"
-          gh run download 13741656255 --repo cs1867/i2util -D artifacts/i2util --name "i2util-${{ env.BUILD_OS }}"  
+          echo "Run ID: 20488411053"
+          gh run download 20488411053 --repo cs1867/i2util -D artifacts/i2util --name "i2util-${{ env.BUILD_OS }}"  
           artifact_path="artifacts/i2util"
-          echo "copy to the artifacts RPM dir"
-          cp "$artifact_path"/RPMS/*.rpm artifacts/RPMS
+          echo "copy to the artifacts deb dir"
+          cp "$artifact_path"/*.deb artifacts/deb
           ls -al "$artifact_path"
 
 
