--- a/ethr0/unibuild-packaging/deb/rules
+++ b/ethr0/unibuild-packaging/deb/rules
@@ -8,8 +8,8 @@ export GOBIN=$(GOPATH)/bin
 export GOCACHE=$(GOPATH)/.cache
 
 # TODO: May need these for U24+
-#export GO111MODULE=on
-#export GOPROXY=direct
+export GO111MODULE=on
+export GOPROXY=direct
 
 # main packaging script based on dh7 syntax
 %:
@@ -25,10 +25,14 @@ override_dh_auto_clean:
 	$(RM) -rf ethr
 	dh_auto_clean
 
+
 override_dh_auto_build:
-	mkdir -p $(GOPATH) $(GOBIN)
-	go get ./...
-	go build
+	go mod download
+	go build -v
+#override_dh_auto_build:
+#	mkdir -p $(GOPATH) $(GOBIN)
+#	go get ./...
+#	go build
 
 override_dh_auto_test:
 
