--- a/ethr0/unibuild-packaging/deb/rules
+++ b/ethr0/unibuild-packaging/deb/rules
@@ -27,8 +27,9 @@ override_dh_auto_clean:
 
 
 override_dh_auto_build:
+    go mod tidy
 	go mod download
-	go build -v
+	go build -v -o ethr .
 #override_dh_auto_build:
 #	mkdir -p $(GOPATH) $(GOBIN)
 #	go get ./...
